# lvchat

./: Cargo.toml
lvchat-client/: Cargo.toml
lvchat-client/src/: config.rs  event.rs  main.rs  message.rs  state.rs  view.rs
lvchat-client/src/input/: server.rs
lvchat-client/src/io/: mod.rs  server.rs  user.rs
lvchat-client/src/view/: message.rs  mod.rs
lvchat-core/: Cargo.toml
lvchat-core/src/: lib.rs  main.rs  message.rs  user.rs
lvchat-server/: Cargo.toml
lvchat-server/src/: client.rs  config.rs  error.rs  event.rs  lib.rs  main.rs  state.rs
lvchat-server/src/handler/: client.rs  server.rs
