[package]
name = "lvchat-client"
version = "0.1.0"
authors = ["avonarret"]
edition = "2018"

[dependencies]
lvchat-core = { path = "../lvchat-core" }

tui = { version = "0.9", default-features = false, features = ["crossterm"] }

flume = "0.7"
parking_lot = "0.11"

chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "^0.0.11"

structopt = "0.3"
cfg-if = "0.1"

log = "*"
flexi_logger = "0.15"
