[package]
name = "lvchat-client"
version = "0.1.0"
authors = ["avonarret"]
edition = "2018"

[dependencies]
lvchat-core = { path = "../lvchat-core" }

log = "*"
flexi_logger = "0.15"

structopt = "0.3"

flume = "0.7"
parking_lot = "0.11"

chrono = { version = "0.4", features = ["serde"] }

tui = { version = "0.9", default-features = false, features = ["crossterm"] }

#[target.'cfg(target_os = "windows")'.dependencies]
#tui = { version = "0.9", default-features = false, features = ["crossterm"] }

#[target.'cfg(all(not(target_os = "windows")))'.dependencies]
#tui = "0.9"